use consistent FreshBooks

--- a/app/views/freshbooks/_identity.html.erb
+++ b/app/views/freshbooks/_identity.html.erb
@@ -20,7 +20,7 @@
 <% end %>
 
   <div class="content-block">
-    <h3>Freshbooks Links</h3>
+    <h3>FreshBooks Links</h3>
     <ul>
       <li><%= link_to t('.dashboard'), 'https://my.freshbooks.com/#/dashboard', target: '_blank' %></li>
       <li><%= link_to t('.projects'), 'https://my.freshbooks.com/#/projects', target: '_blank' %></li>
