--- a/app/views/layouts/_base.html.erb
+++ b/app/views/layouts/_base.html.erb
@@ -7,6 +7,6 @@
   <%= link_to(t('freshbooks.configuration'), plugin_settings_path(id: :redmine_freshbooks_sync)) %>
 </div>
 
-<h2>Freshbooks</h2>
+<h2>FreshBooks</h2>
 
 <%= yield %>
